      is used (3.2.4 +).

PP/03 Add $SOURCE_DATE_EPOCH support for reproducible builds, per spec at
      <https://reproducible-builds.org/specs/source-date-epoch/>.

JH/07 Fix smtp transport use of limited max_rcpt under mua_wrapper. Previously
      the check for any unsuccessful recipients did not notice the limit, and
      erroneously found still-pending ones.


Exim version 4.89
-----------------

JH/01 Bug 1922: Support IDNA2008.  This has slightly different conversion rules
      than -2003 did; needs libidn2 in addition to libidn.

JH/02 The path option on a pipe transport is now expanded before use.

PP/01 GitHub PR 50: Do not call ldap_start_tls_s on ldapi:// connections.
      Patch provided by "Björn", documentation fix added too.

JH/03 Bug 2003: fix Proxy Protocol v2 handling: the address size field was
      missing a wire-to-host endian conversion.

JH/04 Bug 2004: fix CHUNKING in non-PIPELINEING mode.  Chunk data following
      close after a BDAT command line could be taken as a following command,
      giving a synch failure.  Fix by only checking for synch immediately
      before acknowledging the chunk.

PP/02 GitHub PR 52: many spelling fixes, which include fixing parsing of
      no_require_dnssec option and creation of _HAVE_TRANSPORT_APPEND_MAILDIR
      macro.  Patches provided by Josh Soref.

JH/05 Have the EHLO response advertise VRFY, if there is a vrfy ACL defined.
      Previously we did not; the RFC seems ambiguous and VRFY is not listed
      by IANA as a service extension.  However, John Klensin suggests that we
      should.

JH/06 Bug 2017: Fix DKIM verification in -bh test mode.  The data feed into
      the dkim code may be unix-mode line endings rather than smtp wire-format
      CRLF, so prepend a CR to any bare LF.

JH/07 Rationalise the coding for callout smtp conversations and transport ones.
      As a side-benfit, callouts can now use PIPELINING hence fewer round-trips.
