@@ -53,6 +53,9 @@ JH/07 Fix smtp transport use of limited max_rcpt under mua_wrapper. Previously
       the check for any unsuccessful recipients did not notice the limit, and
       erroneously found still-pending ones.
 
+JH/08 Pipeline CHUNKING command and data together, on kernels that support
+      MSG_MORE.  Only in-clear (not on TLS connections).
+
 
 Exim version 4.89
 -----------------
